Fixes #457 - ext out of bounds in "Edit Inventory". Added overflow hidden to container for browsers that might not support view window font sizes

--- a/Binner/Binner.Web/ClientApp/src/pages/Inventory.css
+++ b/Binner/Binner.Web/ClientApp/src/pages/Inventory.css
@@ -113,9 +113,10 @@
 }
 
 .inventory .ui.menu.shortcuts .item {
-	font-size: 0.90vw;
-	justify-content: center;
-	width: 33%;
+  font-size: 0.90vw;
+  justify-content: center;
+  width: 33%;
+  overflow: hidden;
 }
 
 .inventory .ui.menu.shortcuts .item:nth-child(3):before {
